--- a/5w2h.md
+++ b/5w2h.md
@@ -23,7 +23,7 @@
   </tr>
   <tr>
     <td>Why</td>
-    <td>A UFRJ recebe alunos de todo o pais que tem dificuldade em arrumar lugar para morar</td>
+    <td>A UFRJ recebe alunos de todo o país que tem dificuldade em arrumar lugar para morar</td>
   </tr>
   <tr>
     <td>How</td>
@@ -31,7 +31,7 @@
   </tr>
   <tr>
     <td>How much</td>
-    <td>Caluclo homem-hora/metodologia</td>
+    <td>Cálculo homem-hora/metodologia</td>
   </tr>
 </table>
 
