--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-Repositório para trabalho da eletiva Modelagem de Sistemas de Informação.
+<h1> UNImoradia </h1>
+
+<p> Projeto que visa juntar o interesse de locatários de moradias universitárias, como repúblicas, com alunos da UFRJ </p>
+
+<h5> Participantes </h5>
+<ul> Bruno Gavarra (@bgavarra)</ul>
+<ul> Fernando Carrasco (@fcarrasco0)</ul>
+<ul> Larissa Galeno (@lagaleno)</ul>
